# AICO

./: !pg8overwhelming.txt  # realtime_training_pipeline.txt  AICO_Technical_Overview.md  AICO_Whitepaper_Full.md  Aico v.990z1 - Copy.JSON  Aico v.990zworking.candidate.json  Aico_v_990z_with_cache_residency.json  Aico_v_990z_with_cache_residency.json.TXT  LICENSE  README.md  aicofull.json  bio_log_manager.py  cdlss.txt  fully intergrated.txt  generated_for  hallucination storm insanity.txt  new can.7z  squanto.txt  stateless ui.txt  symanteccc.txt  test.ps1  training info.txt  training infoa.txt  weird unknown prompt.txt  what actually falls out.txt  why the math work anonymouse multi model, one prompt.txt
10_dead_man_system/: 10_dead_man_system.json
11_debug_channel/: 11_debug_channel.json
12_bias_awareness_module/: 12_bias_awareness_module.json
13_narrative_coherence_module/: 13_narrative_coherence_module.json  name
14_emotional_temperature_stabilizer/: 14_emotional_temperature_stabilizer.json  description
15_cognitive_load_balancer/: 15_cognitive_load_balancer.json  description
16_context_snapback_layer/: 16_context_snapback_layer.json  description
17_reflective_pause_layer/: description
1_bootstrap_model/: 1_bootstrap_model.json
2_nervous_system/: 2_nervous_system.json
3_controller/: 3_controller.json
4_introspective_layer/: 4_introspective_layer.json
5_model_clusters/: 5_model_clusters.json
6_communication_layer/: 6_communication_layer.json
9_soc_module/: 9_soc_module.json
bare ggml/ggml-master/examples/cdlss_engine/: CMakeLists.txt
(+1563 files in other folders)
